--- a/src/Minter.Example/Minter.Example.csproj
+++ b/src/Minter.Example/Minter.Example.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Minter.Hosting\Minter.Hosting.csproj" />
+    <ProjectReference Include="..\Minter\Minter.csproj" />
   </ItemGroup>
 
 </Project>
